--- a/WebContent/WEB-INF/index.html
+++ b/WebContent/WEB-INF/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<p><a href="darAlta.html">DAR DE ALTA UNA NUEVA TARJETA</a></p>
-	<P><a href="ampliarCupo.html">AMPLIAR CUPO DE TARJETA</a></p>
-	<p><a href="pagar.html">, fg,.htyklñjh</a></p>
+	<p><a href="ingresar.html">INGRESAR DINERO</a></p>
+	<p><a href="retirar.html">RETIRAR DINERO</a></p>
+	<p><a href="pagar.html"> PAGAR</a></p>
 
 </body>
 </html>
