--- a/WebContent/WEB-INF/ingresar.html
+++ b/WebContent/WEB-INF/ingresar.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>PAGAR</title>
+<title>INGRESAR DINERO</title>
 </head>
 <body>
-<H1>PAGAR</H1>
-<form method="get" action="pagar" name="pagar" id="pagar">
+<H1>INGRESAR DINERO</H1>
+<form method="get" action="ingresar" name="ingresar" id="ingresar">
 
 	<label for="numero">NUMERO DE TARJETA DE CREDITO</label>
 	<input type="text" name="numero" id="numero" value=""></input>
@@ -17,8 +17,8 @@
 	<label for="numeroComprobacion">NUMERO DE COMPROBACION</label>
 	<input type="text" name="numeroComprobacion" id="numeroComprobacion" value=""></input>
 	
-	<label for="cantidadIngresar">CANTIDAD A PAGAR</label>
-	<input type="text" name="cantidadPagar" id="cantidadPagar" value=""></input>
+	<label for="cantidadIngresar">CANTIDAD A INGRESAR</label>
+	<input type="text" name="cantidadIngresar" id="cantidadIngresar" value=""></input>
 	
 	<input type="submit" name="enviar" id="enviar" value="Enviar"></input>
 </form>	
