--- a/WebContent/WEB-INF/retirar.html
+++ b/WebContent/WEB-INF/retirar.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>PAGAR</title>
+<title>RETIRAR DINERO</title>
 </head>
 <body>
-<H1>PAGAR</H1>
-<form method="get" action="pagar" name="pagar" id="pagar">
+<H1>RETIRAR DINERO</H1>
+<form method="get" action="retirar" name="retirar" id="retirar">
 
 	<label for="numero">NUMERO DE TARJETA DE CREDITO</label>
 	<input type="text" name="numero" id="numero" value=""></input>
@@ -17,11 +17,11 @@
 	<label for="numeroComprobacion">NUMERO DE COMPROBACION</label>
 	<input type="text" name="numeroComprobacion" id="numeroComprobacion" value=""></input>
 	
-	<label for="cantidadIngresar">CANTIDAD A PAGAR</label>
-	<input type="text" name="cantidadPagar" id="cantidadPagar" value=""></input>
+	<label for="cantidadIngresar">CANTIDAD A RETIRAR</label>
+	<input type="text" name="cantidadRetirar" id="cantidadRetirar" value=""></input>
 	
 	<input type="submit" name="enviar" id="enviar" value="Enviar"></input>
 </form>	
 </body>
-	<p><a href="index.html">INICIO</a></p>
+	<p><a href="index.html">INICIO</a>
 </html>
